[project]
name = "collaborate-sheets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
	{ name = "hermeschen1116", email = "108386417+hermeschen1116@users.noreply.github.com" },
	{ name = "IronBird", email = "ironbird14142@gmail.com" },
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
collaborate-sheets = "collaborate_sheets:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
